feat: implement comprehensive school management system including teacher assignments, student records, and administrative modules